[package]
name = "regex_generate"
version = "0.2.0"
authors = ["CryptArchy <codexarcanum@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/CryptArchy/regex_generate"
documentation = "https://docs.rs/regex_generate"
homepage = "https://github.com/CryptArchy/regex_generate"
description = """
Use regular expressions to generate text.
"""
keywords = ["regex", "text", "generation"]
categories = ["text-processing"]

[dependencies]
rand = "0.6"
regex-syntax = "0.6.2"
error-chain = "0.12.0"

[dev-dependencies]
regex = "1.0.0"
